# qt-practice-projects

FirstQtQuick/: CMakeLists.txt  Page.qml  main.cpp  main.qml
TextFinder/: input.txt  textfinder.cpp  textfinder.h  textfinder.ui
